# paper-tracking-vessel-identity

./: README.md  radenv_videntity.yaml  setup.cfg
paper_tracking_vessel_identity/auth_analysis/: README.md  authorization_known_vs_unknown.sql  fishing_effort_by_known_vs_unknown_revised_v20211101.py  fishing_effort_by_known_vs_unknown_revised_v20220701.py  identify_authorized_fishing_by_fao_area.sql  identify_authorized_fishing_by_rfmo.sql  known_vs_all_fishing.sql
paper_tracking_vessel_identity/data_production/: README.md  config.py  create_identity_ais_activity.sql.j2  create_identity_authorization.sql.j2  create_identity_core.sql.j2  create_identity_owner.sql.j2  schema_for_identity_authorization.csv  schema_for_identity_core.csv  staging_identity_core_base.sql.j2  staging_identity_core_vessel_record_id.sql.j2
paper_tracking_vessel_identity/identity_data_stats/: 2016 Fleet_Update_20190812_overwrite.csv  README.md  config.py  create_identity_data_summary_allyears.sql.j2  create_identity_data_summary_byyear.sql.j2  create_identity_data_summary_chinese_dwf.sql.j2  identity_data_stats_v20220701.py  identity_data_summary.py
paper_tracking_vessel_identity/identity_stitcher/: README.md  config.py  create_identity_change_ports.sql.j2  identity_stitcher_dataset.py  ports_of_identity_changes_v20220701.py  reflagging_busan.R  reflagging_laspalmas.R  reflagging_zhoushan.R  staging_identity_stitcher_core.sql.j2  staging_identity_stitcher_core_filtered.sql.j2
paper_tracking_vessel_identity/nnet_vs_registry/: .gitignore.txt  rfmo_geartype_score_plot.py
(+262 files in other folders)
