[metadata]
name = paper_tracking_vessel_identity
version = 0.1.0
author = Jaeyoon Park
author_email = jaeyoon@globalfishingwatch.org
description = A python/R repo for the paper in review "Tracking Elusive and Shifting Identities of the Global Fishing Fleet".
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GlobalFishingWatch/paper-tracking-vessel-identity
project_urls =
    Bug Tracker = https://github.com/GlobalFishingWatch/paper-tracking-vessel-identity/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
package_data =
python_requires = >=3.7
install_requires =
    pandas
    google-cloud-bigquery
    black
    flake8
    isort
    pre-commit

[options.extras_require]
nb =
    jupyter
    jupytext
